Fix project page basic styles on mobile width

--- a/app/modules/global/global.less
+++ b/app/modules/global/global.less
@@ -12,3 +12,9 @@ body {
 .root-ui-view {
 	min-height: 100%;
 }
+
+@media (max-width: 600px) {
+	.col-xs-6 {
+		width: 100%;
+	}
+}
