--- a/app/modules/global/header.less
+++ b/app/modules/global/header.less
@@ -50,3 +50,20 @@
         }
 	}
 }
+
+@media (max-width: 600px) {
+	.main-header {
+		nav {
+			a {
+				padding: 10px;
+			}
+		}
+
+		.logo {
+			font-size: 3rem;
+			line-height: 3rem;
+			max-height: 43px;
+			margin-top: -3px;
+		}
+	}
+}
