--- a/app/modules/projects/projects.less
+++ b/app/modules/projects/projects.less
@@ -34,3 +34,12 @@
 		margin-bottom: 20px;
 	}
 }
+
+@media (max-width: 600px) {
+	.projects {
+		.project-details {
+			max-width: 362px;
+			margin: 0 auto;
+		}
+	}
+}
